--- a/roles/qdrant_server/templates/nginx.conf.j2
+++ b/roles/qdrant_server/templates/nginx.conf.j2
@@ -3,6 +3,32 @@ events {}
 http {
     server {
         listen 80;
+        {% if enable_tls | default(false) %}
+        server_name _;
+        return 301 https://$host$request_uri;
+        {% else %}
+        location / {
+            proxy_pass http://vatrix-gateway:8000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+        }
+        {% endif %}
+    }
+
+    {% if enable_tls | default(false) %}
+    server {
+        listen 443 ssl;
+        server_name _;
+
+        ssl_certificate     /etc/nginx/cert.pem;
+        ssl_certificate_key /etc/nginx/key.pem;
+        ssl_protocols       TLSv1.2 TLSv1.3;
+        ssl_ciphers         HIGH:!aNULL:!MD5;
 
         location / {
             proxy_pass http://vatrix-gateway:8000;
@@ -10,6 +36,10 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
         }
     }
+    {% endif %}
 }
